macros/tests/compile_fail/generic_no_input_param.stderr
error: [melbi] type parameter 'T' must be used in at least one input parameter for runtime dispatch
 --> tests/compile_fail/generic_no_input_param.rs:9:17
  |
9 | fn make_default<T: Numeric>() -> T {
  |                 ^
